force-app/main/default/objects/Case/fields/CustomDate__c.field-meta.xml
<CustomField>
    <fullName>CustomDate__c</fullName>
    <label>CustomDate</label>
    <type>Date</type>
</CustomField>