force-app/main/default/objects/Case/fields/GHO__c.field-meta.xml
<CustomField>
    <fullName>GHO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GHO</label>
    <type>Checkbox</type>
</CustomField>