force-app/main/default/objects/Case/fields/indicentResponseEmail__c.field-meta.xml
<CustomField>
    <fullName>indicentResponseEmail__c</fullName>
    <label>indicentResponseEmail</label>
    <type>Email</type>
</CustomField>