force-app/main/default/objects/Case/fields/new_date_field__c.field-meta.xml
<CustomField>
    <fullName>new_date_field__c</fullName>
    <label>new date field</label>
    <type>Date</type>
</CustomField>