force-app/main/default/objects/Case/fields/reopenDate__c.field-meta.xml
<CustomField>
    <fullName>reopenDate__c</fullName>
    <label>reopenDate</label>
    <type>Date</type>
</CustomField>