force-app/main/default/objects/Case/fields/Target_Email__c.field-meta.xml
<CustomField>
    <fullName>Target_Email__c</fullName>
    <formula>IF(ISPICKVAl( Origin ,&quot;Web&quot;), &quot;sla-emails@company.com&quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Email</label>
    <type>Text</type>
</CustomField>