force-app/main/default/objects/Case/recordTypes/Small_home.recordType-meta.xml
<RecordType>
    <fullName>Small_home</fullName>
    <active>true</active>
    <businessProcess>Insurance</businessProcess>
    <label>Small home</label>
</RecordType>