force-app/main/default/objects/Case/validationRules/case_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>case_reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Reason ,&quot;exit&quot;)</errorConditionFormula>
    <errorMessage>Reason cannot be &quot;Exit&quot; as this has been deprecated.</errorMessage>
</ValidationRule>