force-app/main/default/objects/Case/validationRules/Related_asset_must_be_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Related_asset_must_be_populated</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(AssetId ) &amp;&amp; ISBLANK( TEXT(SLAViolation__c ))</errorConditionFormula>
    <errorMessage>Related asset must be populated</errorMessage>
</ValidationRule>